# RWiener

./: .gitignore  .hgtags  DESCRIPTION  NAMESPACE  README  configure.ac
R/: deprecated.R  estfun.R  likelihood.R  misc.R  mle.R  plot.R  scorefun.R  sysdata.rda  tests.R  wdm.R  wienerdist.R
inst/: CITATION
man/: RWiener-internal.Rd  deprecated.Rd  estfun.Rd  likelihood.Rd  misc.Rd  mle.Rd  plot.Rd  scorefun.Rd  tests.Rd  wdm.Rd  wiener_likelihood.Rd  wiener_plot.Rd  wienerdist.Rd
src/: diffdensity.c  dwiener.c  init.c  pwiener.c  qwiener.c  rwiener.c  scorefuncs.c
